Add Kubernetes config

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -24,7 +24,8 @@
       <div class="list-group">
         {{if .IsEmpty}}
           <h3 class="text-muted text-center">
-            What are you waiting for?<br>Start oinking.
+            What are you waiting for?<br/>
+            Start oinking.
           </h3>
         {{else}}
           {{range .Oinks}}
