Display instance name on index page
- Hide Analytics link

--- a/templates/page.html.tmpl
+++ b/templates/page.html.tmpl
@@ -15,7 +15,8 @@
           Oinker
         </a>
         <ul class="nav navbar-nav">
-          <li><a href="{{.RelativeRootPath}}/analytics" style="margin-top: 5px; margin-bottom: 5px; padding-top: 10px; padding-bottom: 6px;">Analytics</a></li>
+          <!--<li><a href="{{.RelativeRootPath}}/analytics" style="margin-top: 5px; margin-bottom: 5px; padding-top: 10px; padding-bottom: 6px;">Analytics</a></li>-->
+          <li><div style="margin-top: 5px; margin-bottom: 5px; padding-top: 10px; padding-bottom: 6px;">{{.InstanceName}}</div></li>
         </ul>
       </div>
     </nav>
