Rename to tweeter
- Oink -> Tweet

--- a/templates/page.html.tmpl
+++ b/templates/page.html.tmpl
@@ -2,17 +2,17 @@
 
 <html>
   <head>
-    <title>Oinker</title>
-    <link rel="icon" type="image/png" href="{{.RelativeRootPath}}/assets/images/oinker.png" />
+    <title>Tweeter</title>
+    <link rel="icon" type="image/png" href="{{.RelativeRootPath}}/assets/images/tweeter.png" />
     <link rel="stylesheet" type="text/css" href="{{.RelativeRootPath}}/assets/stylesheets/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="{{.RelativeRootPath}}/assets/stylesheets/oinker.css" />
+    <link rel="stylesheet" type="text/css" href="{{.RelativeRootPath}}/assets/stylesheets/tweeter.css" />
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
         <a class="navbar-brand" href="{{.RelativeRootPath}}/">
-          <img height="22" width="22" src="{{.RelativeRootPath}}/assets/images/oinker.png" alt="" style="vertical-align: top;">
-          Oinker
+          <img height="22" width="22" src="{{.RelativeRootPath}}/assets/images/tweeter.png" alt="" style="vertical-align: top;">
+          Tweeter
         </a>
         <ul class="nav navbar-nav">
           <!--<li><a href="{{.RelativeRootPath}}/analytics" style="margin-top: 5px; margin-bottom: 5px; padding-top: 10px; padding-bottom: 6px;">Analytics</a></li>-->
