--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -4,17 +4,17 @@
     <div class="col-md-3">
       <div class="panel panel-default">
         <div class="panel-body">
-          <form action="{{.RelativeRootPath}}/oink" method="post">
+          <form action="{{.RelativeRootPath}}/tweet" method="post">
             <div class="form-group">
               <label for="handle">Handle</label>
               <input type="text" name="handle" autofocus="true" class="form-control" maxlength="15" pattern="^[\S]*$" title="Handles cannot contain spaces" required="true" />
             </div>
             <div class="form-group">
-              <label for="content">Compose new Oink</label>
+              <label for="content">Compose new Tweet</label>
               <input type="text" name="content" class="form-control" maxlength="140" required="true" style="resize: vertical;" />
             </div>
             <div class="form-group clearfix">
-              <input type="submit" value="Oink" class="btn btn-primary btn-sm pull-right">
+              <input type="submit" value="Tweet" class="btn btn-primary btn-sm pull-right">
             </div>
           </form>
         </div>
@@ -25,10 +25,10 @@
         {{if .IsEmpty}}
           <h3 class="text-muted text-center">
             What are you waiting for?<br/>
-            Start oinking.
+            Start tweeting.
           </h3>
         {{else}}
-          {{range .Oinks}}
+          {{range .Tweets}}
             <div class="list-group-item">
               <div class="media">
                 <div class="pull-left">
@@ -43,7 +43,7 @@
                       </time>
                     </small>
                   </h5>
-                  <p class="oink-content">
+                  <p class="tweet-content">
                     {{.Content}}
                   </p>
                 </div>
