--- a/templates/page.html.tmpl
+++ b/templates/page.html.tmpl
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Tweeter</title>
-    <link rel="icon" type="image/png" href="{{.RelativeRootPath}}/assets/images/tweeter.png" />
+    <link rel="icon" type="image/png" href="{{.RelativeRootPath}}/assets/images/tweeter-logo.png" />
     <link rel="stylesheet" type="text/css" href="{{.RelativeRootPath}}/assets/stylesheets/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="{{.RelativeRootPath}}/assets/stylesheets/tweeter.css" />
   </head>
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container">
         <a class="navbar-brand" href="{{.RelativeRootPath}}/">
-          <img height="22" width="22" src="{{.RelativeRootPath}}/assets/images/tweeter.png" alt="" style="vertical-align: top;">
+          <img height="22" width="22" src="{{.RelativeRootPath}}/assets/images/tweeter-logo.png" alt="" style="vertical-align: top;">
           Tweeter
         </a>
         <ul class="nav navbar-nav">
